feat: Add all html elements and flex styles with CSS

--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Password generator</title>
 </head>
 <body>
-    
+    <div>
+        <h1>Password generator</h1>
+    </div>
+    <div>
+        <div class="container">
+            <p>Your password will be generate here!</p>
+            <button>Click here to generate!</button>
+        </div>
+    </div>
 </body>
 </html>
