feat: Add javaScript functionalities

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <div>
         <div class="container">
             <p>Your password will be generate here!</p>
-            <button>Click here to generate!</button>
+            <button onclick="renderPassword()">Click here to generate!</button>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
